[gd_scene load_steps=5 format=3 uid="uid://uryw4pwrb841"]

[ext_resource type="Script" path="res://Projectiles/dummy.gd" id="1_qf18q"]
[ext_resource type="Texture2D" uid="uid://bsa73oribi33x" path="res://assets/Dummy.png" id="1_xh256"]
[ext_resource type="PackedScene" uid="uid://b4xed2d5b6ydp" path="res://explode_area.tscn" id="3_f5c78"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mb57a"]
radius = 243.0

[node name="Dummy" type="Area2D"]
position = Vector2(587, 333)
collision_layer = 4
collision_mask = 2
script = ExtResource("1_qf18q")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_mb57a")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -50)
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_xh256")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="ExplodeArea" parent="." instance=ExtResource("3_f5c78")]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
